--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT=5050
 Local_DB_URL='mongodb://127.0.0.1:27017/Pustak-Vari-DB'
+JWT_SECRET_KEY=nodejsapp_pustakvari
+mail_host="nikita4office@gmail.com"
+mail_port= 587
+user_name= "nikita4office@gmail.com"
+password= "inrr rppa ytgk ggrn"
