--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ PORT=5050
 Local_DB_URL='mongodb://127.0.0.1:27017/Pustak-Vari-DB'
 Server_DB_Url="mongodb://ebook_us:ebook%40$8087@103.175.163.125:12109/ebookdb?authMechanism=DEFAULT"
 JWT_SECRET_KEY=nodejsapp_pustakvari
-mail_host="nikita4office@gmail.com"
+mail_host="smtp.gmail.com"
 mail_port= 587
-user_name= "nikita4office@gmail.com"
-password= "inrr rppa ytgk ggrn"
+user_name= "neekita.yadav2021@gmail.com"
+password= "pyyplmizwsnmqnoe"
