--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5050
-Server_DB_Url="mongodb://ebook_us:ebook@$8087@103.110.127.223:27020/ebook_db?authMechanism=DEFAULT"
+Server_DB_Url="mongodb://ebook_us:ebook%40$8087@103.110.127.223:27020/ebook_db?authMechanism=DEFAULT"
 JWT_SECRET_KEY=nodejsapp_pustakvari
 mail_host="smtp.gmail.com"
 mail_port= 587
